# botbox

./: .botbox.json  .botbox.toml  .edict.toml  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  agents-managed.md.jinja  eval-loop.md  eval-proposal.md  eval-review.md  finish.md  start.md  testing.md  ux-test-report.md  ux-test.md  worker-loop.md
.beads/: issues.jsonl
.claude/: settings.json
.crit/: events.jsonl
docs/: dev-agent-architecture.md  protocol-quality-gate-matrix.md
draft/: finish.md  review-loop.md  review-request.md  triage.md  update.md
eval-results/: 2026-01-29-level2-run1.md  2026-01-29-level2-run2-sonnet.md  2026-01-30-agent-loop-run10-haiku-v2.1.md  2026-01-30-agent-loop-run2-sonnet.md  2026-01-30-agent-loop-run3-sonnet.md  2026-01-30-agent-loop-run7-sonnet-v3.md  2026-01-30-agent-loop-run8-haiku-v3.md  2026-01-31-review-r2-run1-sonnet.md  2026-01-31-review-r3-run1-sonnet.md  2026-01-31-review-r4-run1-sonnet.md  2026-01-31-review-r4-run2-sonnet.md  2026-01-31-review-run3-sonnet.md  2026-02-01-multi-agent-run1.md  2026-02-01-planning-r7-run1-opus.md  README.md
evals/: rubrics.md
notes/: agent-browser-review.md  agent-flywheel-tools.md  cass.md  dcg-evaluation.md  eval-framework.md  migration-system.md  workflow-docs-maintenance.md
schemas/: botbox.schema.json  edict.schema.json
scratchpad/: r4-phase3.sh  r4-phase4.sh  r4-phase5.sh  r4-setup.sh  r5-setup.sh  r6-run.sh  r6-setup.sh  r7-phase2.sh  r7-setup.sh  r8-run.sh  r8-setup.sh  r9-setup.sh
scripts/: agent-loop.sh  dev-loop.sh  populate-projects-registry.sh  (+2 more)
(+198 files in other folders)
