[package]
name = "botbox"
version = "0.15.6"
edition = "2024"

[[bin]]
name = "botbox"
path = "src/main.rs"

[lib]
name = "botbox"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dialoguer = "0.11"
dirs = "5"
minijinja = "2"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
sha2 = "0.10"
termimad = "0.34"
thiserror = "2"
ureq = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
